# ratelock

./: .env.example  Design.md  Dockerfile.web  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma
backend/src/: .env.demo  app.ts  index.ts
backend/src/config/: redis.ts
backend/src/controller/: alertsController.ts  authController.ts  projectsController.ts  rateLimitController.ts  rulesController.ts
backend/src/middleware/: auth.ts  projectOwner.ts
backend/src/routes/: alerts.ts  auth.ts  projects.ts  rateLimit.ts  rules.ts
backend/src/services/: analyticsService.ts  rateLimitService.ts
backend/src/types/: express.d.ts  index.d.ts  index.ts
backend/src/utils/: errot.ts  password.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/constants/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Animations.tsx  BackgroundGrid.tsx  Badge.tsx  HeroBackground.tsx  HeroSection.css  HeroSection.tsx  LiveDashboard.tsx  LoginForm.tsx  MetricItem.tsx  Navbar.tsx  NeuralMesh.tsx  PasswordPrompt.tsx  ProtectedRoute.tsx  SocialButton.tsx  StatusCard.tsx  featureSecton.tsx  globe.tsx  landingComponents.tsx
frontend/src/lib/: api.ts
frontend/src/screens/: Analytics.tsx  (+6 more)
nginx/: nginx.conf
sdk/node/: README.md  index.ts  package.json  rateLimiter.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/ratelock/: __init__.py  client.py  middleware.py
(+5 files in other folders)
